# fluent-gpui

./: .gitignore  .woodpecker.yml  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/fluent-app/: Cargo.toml
crates/fluent-app/src/: app_builder.rs  assets.rs  lib.rs  title_bar.rs
crates/fluent-core/: Cargo.toml
crates/fluent-core/src/: colors.rs  components.rs  lib.rs  motion.rs  radii.rs  spacing.rs  theme.rs  typography.rs
crates/fluent-layout/: Cargo.toml
crates/fluent-layout/src/: command.rs  command_palette.rs  context_menu.rs  data_table.rs  dialog.rs  dock.rs  flyout.rs  lib.rs  menu_bar.rs  menu_button.rs  menu_tree.rs  message_bar.rs  modal.rs  pane.rs  pane_group.rs  popover.rs  settings_nav.rs  tab_strip.rs  toast.rs  toolbar.rs  tree.rs  workspace.rs
crates/fluent-primitives/: Cargo.toml
crates/fluent-primitives/src/: avatar.rs  badge.rs  button.rs  checkbox.rs  chip.rs  combobox.rs  divider.rs  dropdown.rs  field.rs  focus.rs  icon.rs  icon_button.rs  label.rs  lib.rs  progress.rs  radio_group.rs  searchbox.rs  spinner.rs  switch.rs  text_input.rs  textarea.rs  toggle_button.rs  tooltip.rs
crates/fluent-ribbon/: Cargo.toml
crates/fluent-ribbon/src/: bar.rs  defs.rs  lib.rs
docs/: PLAN.md  STATUS.md  VISUAL_TARGETS.md  WEB_BACKEND_PLAN.md
examples/demo_app/: Cargo.toml
examples/demo_app/src/: main.rs
examples/form/: Cargo.toml
examples/form/src/: main.rs
examples/gallery/: Cargo.toml
examples/gallery/src/: main.rs
examples/hello_world/: Cargo.toml
examples/hello_world/src/: main.rs
examples/widgets/: Cargo.toml
examples/widgets/src/: main.rs
