[workspace]
resolver = "2"
members = [
    "crates/fluent-core",
    "crates/fluent-primitives",
    "crates/fluent-ribbon",
    "crates/fluent-layout",
    "crates/fluent-app",
    "examples/gallery",
    "examples/demo_app",
    "examples/hello_world",
    "examples/widgets",
    "examples/form",
]

[workspace.dependencies]
gpui = "0.2.2"

fluent-core        = { path = "crates/fluent-core",        version = "2.1.1" }
fluent-primitives  = { path = "crates/fluent-primitives",  version = "2.0.3" }
fluent-ribbon      = { path = "crates/fluent-ribbon",      version = "2.0.2" }
fluent-layout      = { path = "crates/fluent-layout",      version = "2.1.1" }
fluent-app         = { path = "crates/fluent-app",         version = "2.0.2" }
