[package]
name = "fluent-app"
version = "2.0.2"
edition = "2021"
license = "Apache-2.0"
description = "Application entry point for FluentGUI: window chrome, title bar, FluentApp builder"
repository = "https://github.com/AusAgentSmith-org/fluent-gpui"
keywords = ["gui", "fluent", "gpui", "app"]
categories = ["gui"]

[dependencies]
gpui            = { workspace = true }
fluent-core     = { workspace = true }
fluent-layout   = { workspace = true }
